--- a/src/serilog.fluentd.csproj
+++ b/src/serilog.fluentd.csproj
@@ -3,12 +3,8 @@
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MsgPack.Cli">
-      <Version>0.9.0-beta2</Version>
-    </PackageReference>
+    <PackageReference Include="MsgPack.Cli" Version="0.9.0-beta2" />
     <PackageReference Include="Serilog" Version="2.4.0" />
-    <PackageReference Include="System.Reflection.TypeExtensions">
-      <Version>4.5.0-preview2-25319-04</Version>
-    </PackageReference>
+    <PackageReference Include="System.Reflection.TypeExtensions" Version="4.3.0" />
   </ItemGroup>
 </Project>
