using stringwriter for json

--- a/sample/sample.csproj
+++ b/sample/sample.csproj
@@ -6,4 +6,9 @@
   <ItemGroup>
     <ProjectReference Include="..\src\serilog.fluentd.csproj" />
   </ItemGroup>
+  <ItemGroup>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
+  </ItemGroup>
 </Project>
