--- a/src/serilog.fluentd.csproj
+++ b/src/serilog.fluentd.csproj
@@ -6,5 +6,6 @@
     <PackageReference Include="Serilog" Version="2.4.0" />
     <PackageReference Include="ServiceStack.Text.Core" Version="1.0.42" />
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.3.0" />
+    <PackageReference Include="Serilog.Formatting.Compact" Version="1.0.0" />
   </ItemGroup>
 </Project>
