--- a/src/Serilog.Sinks.Fluentd.Core.csproj
+++ b/src/Serilog.Sinks.Fluentd.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
-    <VersionPrefix>1.0.6</VersionPrefix>
+    <VersionPrefix>1.0.5</VersionPrefix>
     <Authors>VQComms</Authors>
     <Description>A SeriLog sink for Fluentd</Description>
     <PackageTags>serilog;logging;fluentd;</PackageTags>
@@ -10,5 +10,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Serilog" Version="2.5.0" />
+    <PackageReference Include="Serilog.Sinks.PeriodicBatching" Version="2.1.1" />
   </ItemGroup>
 </Project>
