--- a/src/Serilog.Sinks.Fluentd.Core.csproj
+++ b/src/Serilog.Sinks.Fluentd.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
-    <VersionPrefix>1.0.10</VersionPrefix>
+    <VersionPrefix>1.1.0</VersionPrefix>
     <Authors>VQComms</Authors>
     <Description>A SeriLog sink for Fluentd</Description>
     <PackageTags>serilog;logging;fluentd;</PackageTags>
@@ -9,6 +9,7 @@
     <PackageLicenseUrl>https://github.com/VQComms/Serilog.Sinks.Fluentd.Core/blob/master/LICENCE</PackageLicenseUrl>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="MsgPack.Cli" Version="0.9.2" />
     <PackageReference Include="Serilog" Version="2.5.0" />
     <PackageReference Include="Serilog.Sinks.PeriodicBatching" Version="2.1.1" />
   </ItemGroup>
